<resources>
    <string name="app_name">An Idiot Abroad</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Welcome</string>
    <string name="alt_title_section1">Welcome</string>
    <string name="title_section2">Series 1</string>
    <string name="alt_title_section2">Seven wonders of the world</string>
    <string name="title_section3">Series 2</string>
    <string name="alt_title_section3">The Bucket List</string>
    <string name="title_section4">Series 3</string>
    <string name="alt_title_section4">The Short Way Round</string>
    <string name="tab2_welcome">This season we follow Karl trough the seven wonders of the world! Watch him point out how the great wall of china isn\'t so great, amongst other things.</string>
	<string name="tab3_welcome">This season we follow Karl as Ricky and Stephen send him fullfill other peoples bucket list. Karl does not really like to do things.</string>
    <string name="tab4_welcome">This season we follow Karl trough the footsteps of Marco Polo, and this time he is invited by the friendly little peron, Warrick! Watch as Karl looks forward to seeing Warrick live in the same bad conditions he did last time. (Except this time Ricky and Stephen gives Warrick luxury living.)</string>
    <string name="tv_home"><u><b>HOME</b></u></string>
    <string name="tv_s1q1">I thought I\'d seen the Great Wall of China. Which, being honest with you, it\'s not the Great Wall; it\'s an alright wall. It\'s the Alright Wall of China.</string>
	<string name="tv_s1q2">You know, you can see it for miles - goes on for miles, over the hills and everything. But, so does the M6. Do you know what I mean? You can see that for miles. And you go great. And that does a job. You can drive on that.</string>
    <string name="tv_s1q3">Camels have been around for years. The ships of the desert. That\'s what they\'re known as. We\'ve ended up with Titanic.</string>
	<string name="tv_s1q4">It\'s like a game of Jenga that\'s got out of hand.</string>
	<string name="tv_s2q1">I say happiness is like having a cake. If you have a cake every day, you get sick of that cake. If you\'re happy all the time, you get sick of being happy. That\'s a good saying actually. Happiness is like a cake - have too much of it, you get sick of it.</string>
    <string name="tv_s2q2">[Which super power would you have, Karl?]I\'d be bullshit man. There\'s so many meetings going on where, you know people are bullshitting. I\'d just like to walk in. I wouldn\'t need a special costume, just dressed like this and I would fly in and I\'d go, "Bullshit. He\'s talking bullshit." And they\'d go, "Oh. He\'s Bullshit Man." And I\'d go, "Yea. It is Bullshit Man. You\'re talking bullshit." And eventually, people would stop talking bullshit. Anything that\'s going on in the world: A bloke selling a car that\'s knackered, and he\'s going to say it\'s a great one, and it\'s [whoosh] Bullshit!</string>
    <string name="tv_s2q3">Sharks are always dangerous. Jaws, Shark Attack One, Two, and Three. Three films there. There was a chance for him to get friendly. Didn\'t. An angry shark for three films.</string>
    <string name="tv_s3q1">You should see the crowds here when Warwick was walking down the street. It\’s the same thing. People just like seeing little oddities in life.</string>
    <string name="tv_s3q2">I will kick a panda in the bollocks if I have to.</string>
    <string name="tv_s3q3">It looks like we\'ve been doing the London marathon and got lost.</string>
    <string name="tv_s1e1">  China</string>
    <string name="tv_s1e2">  India</string>
    <string name="tv_s1e3">  Jordan</string>
    <string name="tv_s1e4">  Mexico</string>
    <string name="tv_s1e5">  Egypt</string>
    <string name="tv_s1e6">  Brazil</string>
    <string name="tv_s1e7">  Peru</string>
    <string name="tv_s1e8">  Karl Comes Home</string>
    <string name="tv_s2e1">  Desert Island</string>
    <string name="tv_s2e2">  Trans-Siberian Express</string>
    <string name="tv_s2e3">  Swim with Dolphins</string>
    <string name="tv_s2e4">  Whale Watching</string>
    <string name="tv_s2e5">  Meet a Gorilla</string>
    <string name="tv_s2e6">  Route 66</string>
    <string name="tv_s2e7">  Climb Mount Fuji</string>
    <string name="tv_s2e8">  Karl Comes Home</string>
    <string name="tv_s3e1">  Venice</string>
    <string name="tv_s3e2">  India</string>
    <string name="tv_s3e3">  China</string>
    <string name="tv_s3e4">  A Commentary</string>
	<string name="tv_s1e1f1">  The Great Wall of China is a series of fortifications made of stone, brick, tamped earth, wood, and other materials, generally built along an east-to-west line across the historical northern borders of China in part to protect the Chinese Empire or its prototypical states against intrusions by various nomadic groups or military incursions by various warlike peoples or forces. Several walls were being built as early as the 7th century BC these, later joined together and made bigger, stronger, and unified are now collectively referred to as the Great Wall.</string>
	<string name="tv_s1e1f2">  Beijing, sometimes romanized as Peking, is the capital of the People's Republic of China and one of the most populous cities in the world. The population as of 2012 was 20,693,000. Beijing is the second largest Chinese city by urban population after Shanghai and is the nation's political, cultural, and educational center. It is home to the headquarters of most of China's largest state-owned companies, and is a major hub for the national highway, expressway, railway, and high-speed rail networks. The Beijing Capital International Airport is the second busiest in the world by passenger traffic. The city's history dates back three millenia. As the last of the Four Great Ancient Capitals of China, Beijing has been the political center of the country for much of the past seven centuries. The city is renowned for its opulent palaces, temples, gardens, tombs, walls and gates, and its art treasures and universities have made it a center of culture and art in China. Few cities in the world have been the political and cultural center of an area as immense for so long.</string>
	<string name="tv_s1e1f3">  Chinese cuisine includes styles originating from the diverse regions of China, plus styles of Chinese people in other parts of the world. The history of Chinese cuisine in China stretches back for thousands of years and has changed from period to period and in each region according to climate, imperial fashions, and local preferences. Styles and tastes also varied by class, region, and ethnic background. This led to an unparalleled range of ingredients, techniques, dishes and eating styles in what could be called Chinese food, leading Chinese to pride themselves on eating a wide variety of foods while remaining true to the spirit and traditions of Chinese food culture.</string>
	<string name="tv_s1e1f4">  China, officially the People's Republic of China is the world's most populous country, with a population of over 1.35 billion. The PRC is a single-party state governed by the Communist Party, with its seat of government in the capital city of Beijing. Covering approximately 9.6 million square kilometres, China is the world's second-largest country by land area. China's landscape is vast and diverse, with forest steppes and the Gobi and Taklamakan deserts occupying the arid north and northwest near Mongolia and Central Asia, and subtropical forests prevalent in the wetter south near Southeast Asia. The terrain of western China is rugged and elevated, with the Himalaya, Karakoram, Pamir and Tian Shan mountain ranges separating China from South and Central Asia. The Yangtze and Yellow Rivers, the third- and sixth-longest in the world, have their sources in the Tibetan Plateau and continue to the densely populated eastern seaboard.</string>
	<string name="tv_s1e1f5">  The ancient Chinese civilization – one of the world\'s earliest – flourished in the fertile basin of the Yellow River in the North China Plain. For millennia, China's political system was based on hereditary monarchies, known as dynasties, beginning with the semi-mythological Xia of the Yellow River basin (c. 2000 BC). Since 221 BC, when the Qin Dynasty first conquered several states to form a Chinese empire, the country has expanded, fractured and been reformed numerous times. The Republic of China overthrew the last dynasty in 1911, and ruled the Chinese mainland until 1949. After the defeat of the Empire of Japan in World War II, the Communist Party defeated the nationalist Kuomintang in mainland China and established the People\'s Republic of China in Beijing on 1 October 1949.</string>
	<string name="tv_s1e2f1">  The Taj Mahal is a white marble mausoleum located in Agra, Uttar Pradesh, India. It was built by Mughal emperor Shah Jahan in memory of his third wife, Mumtaz Mahal. The Taj Mahal is widely recognized as "the jewel of Muslim art in India and one of the universally admired masterpieces of the world's heritage". Taj Mahal is regarded by many as the finest example of Mughal architecture, a style that combines elements from Islamic, Persian, Ottoman Turkish and Indian architectural styles. While the white domed marble mausoleum is the most familiar component of the Taj Mahal, it is actually an integrated complex of structures. The construction began around 1632 and was completed around 1653, employing thousands of artisans and craftsmen. The construction of the Taj Mahal was entrusted to a board of architects under imperial supervision.</string>
	<string name="tv_s1e2f2">  The rickshaw began as a 2-wheeled passenger cart, called a pulled rickshaw, generally pulled by one man with one passenger. The first known use of the term was in 1887. Now there are also the cycle rickshaws, also called pedicabs, auto rickshaws and solar rickshaws. Pulled rickshaws created a popular form of transportation, and a source of employment, within Asian cities in the 19th century. Their popularity declined as cars, trains and other forms of transportation became widely available. Auto rickshaws are becoming more popular in some cities in the 21st century as an alternative to taxis because of their low cost.</string>
	<string name="tv_s1e2f3">  Kumbh Mela is a mass Hindu pilgrimage of faith in which Hindus gather to bathe in a sacred river. It is considered to be largest peaceful gathering in the world with over 100 million people visiting during the Maha Kumbh Mela in 2013. It is held every third year at one of the four places by rotation: Haridwar, Allahabad (Prayag), Nashik and Ujjain. Thus the Kumbh Mela is held at each of these four places every twelfth year.</string>
	<string name="tv_s1e2f4">  The Ganges or Ganga is a 2,525 km long river that rises in the western Himalayas and flows south and east through the Gangetic Plain of North India into Bangladesh, where it empties into the Bay of Bengal. It is the longest river of India and is the second greatest river in the world by water discharge. The Ganges is the most sacred river to Hindus and is also a lifeline to millions of Indians who live along its course and depend on it for their daily needs. It is worshiped as the goddess Ganga in Hinduism. It has also been important historically: many former provincial or imperial capitals (such as Patliputra, Kannauj, Kara, Kashi, Allahabad, Murshidabad, Munger, Baharampur, Kampilya and Kolkata) have been located on its banks.</string>
</resources>